[gd_scene load_steps=3 format=3 uid="uid://ihum5xvgxhvf"]

[ext_resource type="Script" uid="uid://d34hrwuffikma" path="res://abilities/teleport/teleport_ability.gd" id="1_2mh2i"]
[ext_resource type="Texture2D" uid="uid://dxqpdtbshqtsr" path="res://art/emote21.png" id="2_0s4gj"]

[node name="TeleportAbility" type="Node2D"]
script = ExtResource("1_2mh2i")

[node name="ui_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(12, 12)
texture = ExtResource("2_0s4gj")

[node name="cooldown_text" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 24.0
offset_top = 6.0
offset_right = 67.0
offset_bottom = 18.0
theme_override_font_sizes/normal_font_size = 10
scroll_active = false

[node name="cooldown_timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="cast_timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="cast_timer" to="." method="_on_cast_timer_timeout"]
